--- a/gioithieu.html
+++ b/gioithieu.html
@@ -113,7 +113,7 @@
     <!-- FOOTER -->
     <footer class="footer">
         <p>&copy; 2026 CLB STEM THPT Thủ Đức</p>
-        <p>Email: stem.thuduc@edu.vn | Fanpage: facebook.com/stemthuduc</p>
+        <p>Email: ..........</p>
     </footer>
 
 </body>
