--- a/huongdan.html
+++ b/huongdan.html
@@ -118,8 +118,9 @@
 
 <!-- FOOTER -->
 <footer class="footer">
-    <p>&copy; 2026 CLB STEM THPT Thủ Đức</p>
-</footer>
+        <p>&copy; 2026 CLB STEM THPT Thủ Đức</p>
+        <p>Email: ...............</p>
+    </footer>
 
 <script src="video.js"></script>
 </body>
