--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- ===== FOOTER ===== -->
     <div class="footer">
         <p>&copy; 2026 STEM THPT Thủ Đức. Bảo lưu mọi quyền.</p>
-        <p>Liên hệ: ...........</p>
+        <p>Email: ...........</p>
     </div>
 
     </body>
