--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="sidebar">
                 <div class="section">
                     <h2>Thông báo</h2>
-                    <p>Tuyển thành viên CLB STEM năm học 2025–2026.</p>
+                    <p>Tuyển thành viên CLB STEM năm học 2025-2026.</p>
                 </div>
             </div>
 
