--- a/gioithieu.html
+++ b/gioithieu.html
@@ -55,7 +55,7 @@
                         <img src="image/ThayChau.png" alt="">
                     </div>
                     <h3>Thầy Lê Quang Châu</h3>
-                    <p>gánh team cực mạnh</p>
+                    <p>Giáo viên phụ trách</p>
                 </div>
 
                 <div class="card">
@@ -71,7 +71,7 @@
                         <img src="image/avatar.jpg" alt="">
                     </div>
                     <h3>Nguyễn Lê Đăng Khoa</h3>
-                    <p>học bá</p>
+                    <p>Phó chủ nhiệm</p>
                 </div>
 
                 <div class="card">
@@ -95,7 +95,7 @@
                         <img src="image/avatar.jpg" alt="">
                     </div>
                     <h3>Bùi Nguyễn Đông Quân</h3>
-                    <p>coder ngu si đần độn</p>
+                    <p>Ủy viên</p>
                 </div>
 
                 <div class="card">
