--- a/huongdan.html
+++ b/huongdan.html
@@ -110,7 +110,8 @@
     <!-- footer -->
     <footer class="footer">
             <p>&copy; 2026 CLB STEM THPT Thủ Đức</p>
-            <p>Email: ...............</p>
+            <p>Email: ...............</p>\
+            <p>© 2026 | Designed & Developed by Quân</p>
     </footer>
 </body>
 </html>
