--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <footer class="footer">
         <p>&copy; 2026 STEM THPT Thủ Đức. Bảo lưu mọi quyền.</p>
         <p>Email: ...........</p>
+        <p>© 2026 | Designed & Developed by Quân</p>
     </footer>
 
 </body>
